--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@ section {
 /* header */
 header {
     padding: 40px 0 100px;
-    background: url(image/black.jpg) no-repeat right center/100%;
+    background: url(Portfolio/image/black.jpg) no-repeat right center/100%;
     color: #fff;
 }
 
