--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ section {
 /* header */
 header {
     padding: 40px 0 100px;
-    background: url(../image/black.jpg) no-repeat right center/100%;
+    background: url(black.jpg) no-repeat right center/100%;
     color: #fff;
 }
 
@@ -196,7 +196,7 @@ main {
 footer{
     text-align: center;
     padding: 40px 0 100px;
-    background: url(../image/black.jpg) no-repeat right center/100%;
+    background: url(black.jpg) no-repeat right center/100%;
     color: #fff;
 }
   
